# ai-knowledge-assistant

./: README.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  config.py  ingest.py  main.py  pyproject.toml
backend/api/: dependencies.py  schemas.py
backend/api/routes/: ask.py
backend/ingestion/: chunker.py  embedder.py  loader.py  pipeline.py
backend/llm/: ollama_client.py
backend/retrieval/: retriever.py
backend/tests/: test_loader.py  test_retriever.py
backend/vector_store/: chroma_store.py
frontend/: .dockerignore  Dockerfile  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/ask/stream/: route.ts
frontend/app/api/health/: route.ts
frontend/components/: AnswerStream.tsx  ConnectionStatus.tsx  QuestionForm.tsx  SourcesList.tsx
frontend/hooks/: useAskStream.ts  useHealthCheck.ts
frontend/lib/: api.ts
