[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.5",
    "langchain-text-splitters>=1.1.1",
    "onnxruntime<1.18",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
]
