[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "langchain-text-splitters>=1.1.1",
    "onnxruntime<1.18",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "sentence-transformers>=5.3.0",
    "torch",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
